Closed Bug 319380 Opened 20 years ago Closed 20 years ago

canvas quadraticCurveTo implementation is incorrect/bogus

Categories

(Core :: Graphics: Canvas2D, defect)

PowerPC
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

(Keywords: fixed1.8.0.1, fixed1.8.1)

Attachments

(1 file)

The implementation of canvas's quadraticCurveTo is bogus; I have a simple fix (will attach in the next day or two, as I need to redo it for the 1.8 branch).
Flags: blocking1.8.0.1?
Status: NEW → ASSIGNED
Summary: quadraticCurveTo is bogus → canvas quadraticCurveTo implementation is incorrect (bogus)
Patch. Convert the quadratic curve to a cubic curve correctly.
Attachment #207520 - Flags: review?
Attachment #207520 - Flags: review? → review?(pavlov)
Comment on attachment 207520 [details] [diff] [review] 319380-broken-canvas-quadraticCurveTo.patch r=stuart, over my shoulder since his machine is "printing". This is really low risk, and fixes the quadraticCurveTo function.
Attachment #207520 - Flags: review?(pavlov) → review+
Checked in on trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Summary: canvas quadraticCurveTo implementation is incorrect (bogus) → canvas quadraticCurveTo implementation is incorrect/bogus
Comment on attachment 207520 [details] [diff] [review] 319380-broken-canvas-quadraticCurveTo.patch (Forgot to request approval flags) Low-risk patch that fixes the canvas quadraticCurveTo function; just adds some math bits before calling in to cairo.
Attachment #207520 - Flags: approval1.8.1?
Attachment #207520 - Flags: approval1.8.0.1?
Comment on attachment 207520 [details] [diff] [review] 319380-broken-canvas-quadraticCurveTo.patch a=dveditz for drivers
Attachment #207520 - Flags: approval1.8.1?
Attachment #207520 - Flags: approval1.8.1+
Attachment #207520 - Flags: approval1.8.0.1?
Attachment #207520 - Flags: approval1.8.0.1+
Flags: blocking1.8.1+
Flags: blocking1.8.0.1?
Flags: blocking1.8.0.1+
Vlad: Is there any easy way for QA to verify this bug?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: