b=319380, fix canvas quadraticCurveTo to actually do the right thing, r=stuart